--- a/src/pages/hub/hub.html
+++ b/src/pages/hub/hub.html
@@ -12,7 +12,7 @@
         Game code
       </ion-label>
       <ion-input type="text" placeholder="Enter game code" name="Game name"
-       [(ngModel)]="gamePhrase.phrase" name="phrase">
+       [(ngModel)]="gamePhrase.game_id" name="game_id">
       </ion-input>
     </ion-item>
   </form>
