Added base64 -> image conversion

--- a/src/pages/gameplay/gameplay.html
+++ b/src/pages/gameplay/gameplay.html
@@ -17,7 +17,7 @@
   <div id="ionball"></div>
  
   <ion-fab right top small>
-      <button ion-fab color="light"><ion-icon name="switch"></ion-icon></button>
+      <button ion-fab color="light" background><img [src]="bgImage"> </button>
   </ion-fab>
 
   <ion-fab left top small>
