Works well enough

--- a/src/pages/gameplay/gameplay.html
+++ b/src/pages/gameplay/gameplay.html
@@ -25,6 +25,6 @@
   </ion-fab>
 
   <ion-fab right bottom small>
-      <button (click)="refresh()" ion-fab color="light"><ion-icon name="archive"></ion-icon></button>
+      <button (click)="takePicture()" ion-fab color="light"><ion-icon name="archive"></ion-icon></button>
   </ion-fab>
 </ion-content>
