--- a/src/pages/lobby/lobby.html
+++ b/src/pages/lobby/lobby.html
@@ -40,7 +40,7 @@
       </form>
     </ion-list>
   </ion-card>
-  <button id="gameLobby-button6" ion-button color="positive" block>
+  <button id="gameLobby-button6" ion-button color="positive" block (click)="startGameplay()">
     Start Game
   </button>
   <button id="Update Status" ion-button color="positive" block
